# geo-pic

./: prompt_for_ai.md  record.md  report.md  对比.md
.qwen/: settings.json
.qwen/memories/feedback/: workflow.md
.qwen/projects/-home-mago-graphic-PA1/memory/: cuda-first.md
code/: CMakeLists.txt  pix.py  run_all.sh  vis_pg.py
code/config/: settings.conf  settings_guide_off.conf  settings_guide_on.conf  settings_tmpbak.conf
code/include/: brdf.hpp  bvh.hpp  camera.hpp  gpu_render.h  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  path_guiding.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
code/output/pg_stats/: pg_iter_458.txt
code/src/: bvh.cpp  gpu_render.cu  image.cpp  main.cpp  mesh.cpp  path_guiding.cpp  scene_parser.cpp
code/testcases/: cornell.txt  cornell_bunny.txt  cornell_head.txt  cornell_stage1.txt  dp.txt  face_light.txt  final_pic.txt  final_test.txt  scene05_bunny_200.txt  scene_glossy_test.txt  scene_gpu_test.txt  scene_test_reflect_refract.txt  test.txt  thing_light.txt
